--- a/.github/workflows/build-slides.yml
+++ b/.github/workflows/build-slides.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: sghelichkhani/quarkdown         # Replace with the correct owner/repo
-          ref: my-feature-branch                 # Replace with the branch or tag you want
+          ref: branch
           token: ${{ secrets.GITHUB_TOKEN }}     # Or a PAT if the repo is private
           path: quarkdown
 
