--- a/.github/workflows/build-slides.yml
+++ b/.github/workflows/build-slides.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Build Quarkdown distribution
         run: |
           ls -la
+          readlink -f ./
           cd quarkdown
           ./gradlew build distZip
 
