--- a/.github/workflows/build-slides.yml
+++ b/.github/workflows/build-slides.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Set up Python
         run: uv python install
 
-      - name: Install Python dependencies
-        run: uv pip install mkdocs-material
+      # - name: Install Python dependencies
+      #   run: uv pip install mkdocs-material
 
       - name: Building mkdocs
         run: |
