--- a/.github/workflows/build-slides.yml
+++ b/.github/workflows/build-slides.yml
@@ -53,7 +53,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build-quarkdown-slides
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
     environment:
       name: github-pages
     steps:
