--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: water-course
-site_url: water-course.github.io 
+site_url: https://water-course.github.io 
 nav:
   - Home: index.md
   - Course: course.md
