--- a/.github/workflows/build-slides.yml
+++ b/.github/workflows/build-slides.yml
@@ -50,11 +50,41 @@ jobs:
           cd slides
           make
 
+     - name: Get latest successful workflow run from tutorials
+        id: get_run
+        run: |
+          response=$(curl -s \
+            -H "Authorization: token ${{ secrets.TUTORIALSACCESS }}" \
+            "https://api.github.com/repos/water-course/tutorials/actions/workflows/jupytext-conversion.yml/runs?status=success&per_page=1")
+          run_id=$(echo "$response" | jq -r '.workflow_runs[0].id')
+          echo $run_id
+          echo "run_id=$run_id" >> $GITHUB_OUTPUT
+
+      - name: Get artifact download URL
+        id: get_artifact
+        run: |
+          artifacts=$(curl -s \
+            -H "Authorization: token ${{ secrets.TUTORIALSACCESS }}" \
+            "https://api.github.com/repos/water-course/tutorials/actions/runs/${{ steps.get_run.outputs.run_id }}/artifacts")
+
+          download_url=$(echo "$artifacts" | jq -r '.artifacts[] | select(.name=="ready") | .archive_download_url')
+          echo "download_url=$download_url" >> $GITHUB_OUTPUT
+
+      - name: Download artifact
+        run: |
+          curl -L -H "Authorization: token ${{ secrets.REPO_A_PAT }}" \
+            -o ready "${{ steps.get_artifact.outputs.download_url }}"
+
+      - name: List downloaded content
+        run: |
+          cp ready/*.ipynb site/content/
+
       - name: Upload built slides
         uses: actions/upload-pages-artifact@v3
         with:
           path: site
 
+     
   deploy:
     runs-on: ubuntu-latest
     needs: build-quarkdown-slides
