--- a/.github/workflows/latest_tutorials.yml
+++ b/.github/workflows/latest_tutorials.yml
@@ -31,7 +31,9 @@ jobs:
       - name: Download and unzip artifact
         run: |
           curl -L -H "Authorization: token ${{ secrets.REPO_A_PAT }}" \
-            -o ready "${{ steps.get_artifact.outputs.download_url }}"
+            -o ready.zip "${{ steps.get_artifact.outputs.download_url }}"
+          unzip ready.zip -d ready-extracted
+          ls -R ready-extracted
 
       - name: List downloaded content
         run: find ./  
