--- a/.github/workflows/latest_tutorials.yml
+++ b/.github/workflows/latest_tutorials.yml
@@ -26,14 +26,14 @@ jobs:
             "https://api.github.com/repos/water-course/tutorials/actions/runs/${{ steps.get_run.outputs.run_id }}/artifacts")
 
           download_url=$(echo "$artifacts" | jq -r '.artifacts[] | select(.name=="ready") | .archive_download_url')
+          echo ${download_url}
           echo "download_url=$download_url" >> $GITHUB_OUTPUT
 
       - name: Download and unzip artifact
         run: |
           curl -L -H "Authorization: token ${{ secrets.REPO_A_PAT }}" \
-            -o ready.zip "${{ steps.get_artifact.outputs.download_url }}"
-          unzip ready.zip -d ready-extracted
-          ls -R ready-extracted
+            -o ready "${{ steps.get_artifact.outputs.download_url }}"
+          ls -R ready
 
       - name: List downloaded content
         run: find ./  
