--- a/.github/workflows/latest_tutorials.yml
+++ b/.github/workflows/latest_tutorials.yml
@@ -4,6 +4,9 @@ on:
   workflow_dispatch:
     inputs:
 
+secrets:
+  TUTORIALSACCESS: ${{ secrets.TUTORIALSACCESS }}
+
 jobs:
   download-artifact:
     runs-on: ubuntu-latest
