--- a/.github/workflows/latest_tutorials.yml
+++ b/.github/workflows/latest_tutorials.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Download and unzip artifact
         run: |
           export TOKEN="${{ secrets.TUTORIALSACCESS }}"
-          echo "Token present? ${{ TOKEN:0:4 }}..."
+          echo "Token present? ${TOKEN:0:4} ..."
           curl -L -H "Authorization: token ${{ secrets.TUTORIALSACCESS }}" \
             -o ready.zip "${{ steps.get_artifact.outputs.download_url }}"
           unzip -l ready.zip
