--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,11 @@ site_url: https://water-course.github.io
 nav:
   - Home: index.md
   - Content: content.md
+plugins:
+  - mkdocs-jupyter:
+      toc_depth: 2
+      custom_mathjax_url: "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS_CHTML-full,Safe"
+      include_source: True
 theme:
   name: material
   favicon: assets/favicon.png
