Workflow needing to install mkdoc jupytext support

--- a/.github/workflows/build-slides.yml
+++ b/.github/workflows/build-slides.yml
@@ -71,8 +71,8 @@ jobs:
       - name: Set up Python
         run: uv python install
 
-      # - name: Install Python dependencies
-      #   run: uv pip install mkdocs-material
+      - name: Install Python dependencies
+        run: uv pip install -e .
 
       - name: Building mkdocs
         run: |
