--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,5 @@ dependencies = [
     "mkdocs>=1.6.1",
     "mkdocs-literate-nav>=0.6.1",
     "mkdocs-material>=9.6.5",
+    "mkdocs-jupyter>=0.2.4",
 ]
