--- a/.github/workflows/build-slides.yml
+++ b/.github/workflows/build-slides.yml
@@ -68,11 +68,9 @@ jobs:
         run: |
           mkdir -p docs/tutorials && mv -v *.ipynb docs/tutorials/
 
+      - uses: astral-sh/setup-uv@v5
       - name: Set up Python
         run: uv python install
-
-      - name: Install Python dependencies
-        run: uv pip install -e .
 
       - name: Building mkdocs
         run: |
