--- a/.github/workflows/build-slides.yml
+++ b/.github/workflows/build-slides.yml
@@ -3,8 +3,10 @@ name: build_slides
 on:
   push:
     branches:
-      - '**'
+      - main
+      - master
   pull_request:
+  workflow_dispatch:
 
 permissions:
   contents: read
